--- a/RetiDiCalcolatoriM.tex
+++ b/RetiDiCalcolatoriM.tex
@@ -16,9 +16,9 @@
 \usepackage[italian]{babel}
 \usepackage{color}
 \usepackage{hyperref}
-\title{Riassunto di studio per Reti di Calcolatori LS}
-\author{Daniele Tiles}
-\date{7 ottobre 2007}
+\title{Riassunto di studio per Reti di Calcolatori M}
+\author{Daniele Tiles \and Davide Bellettini (revisione)}
+\date{2007 - 2014}
 \begin{document}
 \maketitle
 \newpage
